--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "i": "^0.3.6",
     "node-sass": "^4.12.0",
     "npm": "^6.9.0",
+    "rc-slider": "^8.6.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.1",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
